updated Timeline with correct overflow style and added some test styling for controls

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -112,7 +112,7 @@
 }
 
 .timeline {
-   overflow: scroll;
+   overflow: auto;
 }
 
 .timelineImage {
